# gltf-viewer

./: .gitignore  Cargo.toml  TODO.md
crates/gltf-engine/: Cargo.toml
crates/gltf-engine/src/: camera.rs  image_util.rs  import.rs  lib.rs  main.rs  mesh.rs  model.rs  texture.rs
crates/gltf-test/: Cargo.toml
crates/gltf-test/src/: main.rs
crates/gltf-viewer/: Cargo.toml
crates/gltf-viewer/src/: camera.rs  command.rs  global_event.rs  image_util.rs  import.rs  lib.rs  main.rs  model.rs  shader.wgsl  texture.rs  todo_list.rs  undo_manager.rs
crates/gltf-viewer/src/ui/: component.rs  framework.rs  mod.rs  node_property.rs  root.rs  todo_list.rs  view_state.rs
crates/gltf-viewer/src/ui/todo_list/: mod.rs  view_context.rs  view_state.rs
src/: lib.rs  main.rs  texture.rs
