[package]
name = "gltf-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf-engine = { path = "../gltf-engine" }
env_logger = "0.9"
log = "0.4"
instant = "0.1"  # std::time::Instant panics on WASM
pollster = "0.2"
