[package]
name = "gltf-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gltf-engine = { path = "../gltf-engine" }
env_logger = "0.9"
log = "0.4"
instant = "0.1"  # std::time::Instant panics on WASM
pollster = "0.2"
eframe = { version = "0.20.1", default-features = false, features = ["default_fonts", "wgpu"] }
egui-wgpu = "0.20.0"
tracing-subscriber = "0.3"
winit = "0.27"
parking_lot = "0.12"
